--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -4,11 +4,11 @@
 <div class="col-md-12">
     <!--로그인 기능 영역-->
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <a href="/posts/save" role="button"
-               class="btn btn-primary">글 등록</a>
+               class="btn btn-primary float-right">글 등록</a>
             {{#userName}} <!-- 머스테치는 true/false 여부만 판단하므로 항상 최종값을 넘겨줘야 함 userName이 있다면 userName 노출 -->
-                Logged in as: <spen id="user">{{userName}}</spen>
+                안녕하세요! <spen id="user">{{userName}} 님</spen>
                 <a href="/logout" class="btn btn-info active" role="button">Logout</a>
                 <!-- 스프링 시큐리티에서 기본적으로 제공하는 로그아웃 URL -->
             {{/userName}}
