--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,39 +38,47 @@
         </tbody>
     </table>
 
-    <div class="row">
-        <div class="col-md-12">
-            <nav aria-label="Page navigation">
-                <ul class="pagination justify-content-center">
-                    <!-- 첫번째 페이지로 이동 -->
-                    <a th:href="@{/(page=1)}">첫 페이지 </a>
 
-                    <!-- 이전 링크 활성화 비활성화 -->
-                    <a th:href="${postsPages.first} ? '#' : @{/(page=${postsPages.number})}"> 이전 </a>
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            <!-- 첫번째 페이지로 이동 -->
+            <li class="page-item">
+                <a class="page-link" th:href="@{/(page=1)}" aria-label="Previous">
+                    <span aria-hidden="true">처음</span>
+                </a>
+            </li>
+            <!-- 이전 링크 활성화 비활성화 -->
+            <li class="page-item">
+                <a class="page-link" th:href="${postsPages.first} ? '#' : @{/(page=${postsPages.number})}" aria-label="Previous">
+                    <span aria-hidden="true">이전</span>
+                </a>
+            </li>
+            <!-- 페이지 번호 링크(현재 페이지는 숫자만) for(int page=startPage; page<=endPage; page++)-->
+            <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
+                <a class="page-link" th:if="${page == postsPages.number + 1}">
+                    <span th:text="${page}"></span>
+                </a>
+                <span th:unless="${page == postsPages.number + 1}">
+                    <a class="page-link" th:href="@{/(page=${page})}">
+                        <span th:text="${page}"></span>
+                    </a>
+                </span>
+            </span>
+            <!-- 다음 링크 활성화 비활성화 -->
+            <li class="page-item">
+                <a class="page-link" th:href="${postsPages.last} ? '#' : @{/(page=${postsPages.number + 2})}" aria-label="Next">
+                    <span aria-hidden="true">다음</span>
+                </a>
+            </li>
+            <!-- 마지막 페이지로 이동 -->
+            <li class="page-item">
+                <a class="page-link" th:href="@{/(page=${postsPages.totalPages})}" aria-label="Previous">
+                    <span aria-hidden="true">끝</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
-                    <!-- 페이지 번호 링크(현재 페이지는 숫자만)
-                            for(int page=startPage; page<=endPage; page++)-->
-                    <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
-                        <!-- 현재페이지는 링크 없이 숫자만 -->
-                        <span th:if="${page == postsPages.number + 1}" th:text="${page}">
-                        </span>
-                        <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
-                        <span th:unless="${page == postsPages.number + 1}">
-<!--                            <span th:if="${page > 1}">-->
-                               <a th:href="@{/(page=${page})}" th:text="${page}"></a>
-<!--                            </span>-->
-                        </span>
-                    </span>
-
-                    <!-- 다음 링크 활성화 비활성화 -->
-                    <a th:href="${postsPages.last} ? '#' : @{/(page=${postsPages.number + 2})}"> 다음 </a>
-
-                    <!-- 마지막 페이지로 이동 -->
-                    <a th:href="@{/(page=${postsPages.totalPages})}"> 마지막 페이지</a>
-                </ul>
-            </nav>
-        </div>
-    </div>
 
 </div>
 
