--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
 
-<h1>게시판</h1>
+<h1><a href="/">게시판</a></h1>
 <div class="col-md-12">
     <!--로그인 기능 영역-->
     <div class="row">
@@ -18,6 +18,15 @@
         </div>
     </div>
     <br>
+
+    <!--검색 영역-->
+    <div class="d-flex justify-content-end">
+        <form action="/" method="GET" class="form-inline" role="search">
+            <input type="text" name="searchKeyword" class="form-control" id="search" placeholder="검색어를 입력하세요.">
+            <button class="btn btn-success">검색</button>
+        </form>
+    </div>
+
     <!-- 목록 출력 영역 -->
     <table class="table table-horizontal table-bordered">
         <thead class="thead-strong">
@@ -38,47 +47,43 @@
         </tbody>
     </table>
 
-
+    <!--페이지네이션-->
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             <!-- 첫번째 페이지로 이동 -->
             <li class="page-item">
-                <a class="page-link" th:href="@{/(page=1)}" aria-label="Previous">
+                <a class="page-link" th:href="${postsPages.first} ? '#' : @{/(page=0)}" aria-label="Previous">
                     <span aria-hidden="true">처음</span>
                 </a>
             </li>
             <!-- 이전 링크 활성화 비활성화 -->
             <li class="page-item">
-                <a class="page-link" th:href="${postsPages.first} ? '#' : @{/(page=${postsPages.number})}" aria-label="Previous">
+                <a class="page-link" th:href="${postsPages.first} ? '#' : @{/(page=${postsPages.number - 1})}" aria-label="Previous">
                     <span aria-hidden="true">이전</span>
                 </a>
             </li>
-            <!-- 페이지 번호 링크(현재 페이지는 숫자만) for(int page=startPage; page<=endPage; page++)-->
-            <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
-                <a class="page-link" th:if="${page == postsPages.number + 1}">
-                    <span th:text="${page}"></span>
+            <th:block th:each="page: ${#numbers.sequence(startPage, endPage)}">
+                <a class="page-link"
+                   th:if="${page != nowPage}"
+                   th:href="@{/(page = ${page - 1}, searchKeyword = ${param.searchKeyword})}"
+                   th:text="${page}">
                 </a>
-                <span th:unless="${page == postsPages.number + 1}">
-                    <a class="page-link" th:href="@{/(page=${page})}">
-                        <span th:text="${page}"></span>
-                    </a>
-                </span>
-            </span>
+                <strong class="page-link" th:if="${page == nowPage}" th:text="${page}"></strong>
+            </th:block>
             <!-- 다음 링크 활성화 비활성화 -->
             <li class="page-item">
-                <a class="page-link" th:href="${postsPages.last} ? '#' : @{/(page=${postsPages.number + 2})}" aria-label="Next">
+                <a class="page-link" th:href="${postsPages.last} ? '#' : @{/(page=${postsPages.number + 1})}" aria-label="Next">
                     <span aria-hidden="true">다음</span>
                 </a>
             </li>
             <!-- 마지막 페이지로 이동 -->
             <li class="page-item">
-                <a class="page-link" th:href="@{/(page=${postsPages.totalPages})}" aria-label="Previous">
+                <a class="page-link" th:href="${postsPages.last} ? '#' : @{/(page=${postsPages.totalPages - 1})}" aria-label="Previous">
                     <span aria-hidden="true">끝</span>
                 </a>
             </li>
         </ul>
     </nav>
-
 
 </div>
 
