20240225 댓글 수정 삭제 기능 완료 read update 화면 분리

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,14 +36,16 @@
             <th>제목</th>
             <th>작성자</th>
             <th>최종수정일</th>
+            <th>조회수</th>
         </tr>
         </thead>
         <tbody id="tbody">
         <tr th:each="post : ${postsPages}">
             <td th:text="${post.id}"></td>
-            <td><a th:href="@{'/posts/update/' + ${post.id}}" th:text="${post.title}"></a></td>
+            <td><a th:href="@{'/posts/read/' + ${post.id}}" th:text="${post.title}"></a></td>
             <td th:text="${post.author}"></td>
             <td th:text="${post.modifiedDate}"></td>
+            <td th:text="${post.view}"></td>
         </tr>
         </tbody>
     </table>
