--- a/src/main/resources/templates/posts-update.html
+++ b/src/main/resources/templates/posts-update.html
@@ -23,58 +23,10 @@
             </div>
         </form>
         <a href="/" role="button" class="btn btn-secondary">목록으로</a>
-        <th:block th:if="${author}">
-            <button type="button" class="btn btn-primary" id="btn-update">수정 완료</button>
+<!--        <th:block th:if="${author}">-->
+            <button type="button" class="btn btn-primary" id="btn-update">수정완료</button>
             <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
-        </th:block>
-
-        <!-- 댓글 부분 -->
-        <th:block th:if="${comments != null}">
-            <div class="card">
-                <div class="card-header bi bi-chat-dots">
-                <span th:if="${comments.size()}">
-                    댓글 <span th:text="${comments.size()}"></span> 개
-                </span>
-                    <span th:unless="${comments.size()}">댓글 0 개</span>
-                </div>
-                <!-- 댓글내용 부분 -->
-                <ul class="list-group-flush">
-                    <li th:each="comment : ${comments}" class="list-group-item">
-                <span>
-                    <span style="font-size: small" th:text="${comment.author}"></span>
-                    <span style="font-size: xx-small" th:text="${comment.createdDate}"></span>&nbsp;
-                    <button class="badge bi bi-pencil-square"> 수정</button>
-                    <button class="badge bi bi-trash"> 삭제</button>
-                </span>
-                        <div th:text="${comment.comment}"></div>
-                    </li>
-                    <!-- comments가 비어있을 때 표시할 내용 -->
-                </ul>
-            </div>
-        </th:block>
-        <th:block th:unless="${comments != null}">
-            <li class="list-group-item">댓글이 없습니다.</li>
-        </th:block>
-        <div class="card">
-            <div class="card-header bi bi-chat-right-dots">댓글 쓰기</div>
-
-<!--            {{! 댓글작성 부분}}-->
-            <form>
-                <input type="hidden" id="postsId" th:value="${post.id}">
-
-                <div class="card-body" th:if="${user}">
-                    <textarea id="comment" class="form-control" rows="4" placeholder="댓글을 입력하세요"></textarea>
-                </div>
-
-                <div class="card-footer" th:if="${user}">
-                    <button type="button" id="btn-comment-save" class="btn btn-outline-primary bi bi-pencil-square"> 등록</button>
-                </div>
-
-                <div class="card-body" style="font-size: small" th:unless="${user}">
-                    <a href="/auth/login">로그인</a>을 하시면 댓글을 등록할 수 있습니다.
-                </div>
-            </form>
-        </div>
+<!--        </th:block>-->
 
     </div>
 </div>
