--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -1,23 +1,18 @@
 <th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
 
-<h1>게시글 등록</h1>
-
-<div class="col-md-12">
-    <div class="col-md-4">
-        <form>
-            <div class="form-group">
-                <label for="title">제목</label>
-                <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요" th:value="${title}">
-            </div>
-            <div class="form-group">
-                <label for="author">작성자</label>
-                <input type="text" class="form-control" id="author" th:value="${userName}" readonly>
-            </div>
-            <div class="form-group">
-                <label for="content">내용</label>
-                <textarea class="form-control" id="content" placeholder="내용을 입력하세요" th:text="${content}"></textarea>
-            </div>
-        </form>
+<h3 style="text-align: center">게시글 등록</h3>
+<br/>
+<div class="col-md-9 mx-auto">
+    <form>
+        <div style="display: flex;" class="form-group">
+            <input style="width: 80%" type="text" class="form-control" id="title" placeholder="제목을 입력하세요" th:value="${title}">
+            <input style="width: 20%; margin-left: 10px;" type="text" class="form-control" id="author" th:value="${userName}" readonly>
+        </div>
+        <div class="form-group">
+            <textarea class="form-control h-75" id="content" placeholder="내용을 입력하세요" th:text="${content}"></textarea>
+        </div>
+    </form>
+    <div class="text-right">
         <a href="/" role="button" class="btn btn-secondary">취소</a>
         <button type="button" class="btn btn-primary" id="btn-save">등록</button>
     </div>
