--- a/src/main/resources/templates/posts-update.html
+++ b/src/main/resources/templates/posts-update.html
@@ -1,32 +1,28 @@
 <th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
 
-<h1>게시글 수정</h1>
-
-<div class="col-md-12">
-    <div class="col-md-4">
+<h3 style="text-align: center">게시글 수정</h3>
+<br/>
+<div class="col-md-9 mx-auto">
+    <div class="col-md-12">
         <form>
             <div class="form-group">
-                <label for="id">글 번호</label>
-                <input type="text" class="form-control" id="id" th:value="${post.id}" readonly>
-            </div>
-            <div class="form-group">
-                <label for="title">제목</label>
-                <input type="text" class="form-control" id="title" th:value="${post.title}">
-            </div>
-            <div class="form-group">
-                <label for="author">작성자</label>
-                <input type="text" class="form-control" id="author" th:value="${post.author}" readonly>
+                <label for="content">제목</label>
+                <div style="display: flex;">
+                    <!--                <input style="width: 20%" type="text" class="form-control" id="id" th:value="${post.id}" readonly>-->
+                    <input style="width: 80%" type="text" class="form-control" id="title" th:value="${post.title}" >
+                    <input style="width: 20%; margin-left: 10px" type="text" class="form-control" id="author" th:value="${post.author}" readonly>
+                </div>
             </div>
             <div class="form-group">
                 <label for="content">내용</label>
-                <textarea class="form-control" id="content" th:text="${post.content}"></textarea>
+                <textarea class="form-control h-75" id="content" th:text="${post.content}"></textarea>
             </div>
         </form>
-        <a href="/" role="button" class="btn btn-secondary">목록으로</a>
-<!--        <th:block th:if="${author}">-->
+        <div class="text-right">
+            <a href="/" role="button" class="btn btn-secondary">목록으로</a>
             <button type="button" class="btn btn-primary" id="btn-update">수정완료</button>
             <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
-<!--        </th:block>-->
+        </div>
 
     </div>
 </div>
