--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,8 +11,9 @@
                     <a href="/logout" class="btn btn-info active" role="button">Logout</a>
                 </div>
                 <div th:unless="${userName}">
-                    <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
-                    <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
+                    <a href="/auth/login" class="btn btn-secondary" role="button">로그인</a>
+<!--                    <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>-->
+<!--                    <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>-->
                 </div>
             </div>
         </div>
