--- a/src/main/resources/templates/posts-update.html
+++ b/src/main/resources/templates/posts-update.html
@@ -8,7 +8,7 @@
             <div class="form-group">
                 <label for="content">제목</label>
                 <div style="display: flex;">
-                    <!--                <input style="width: 20%" type="text" class="form-control" id="id" th:value="${post.id}" readonly>-->
+                    <input type="hidden" th:id="'id'" th:value="${post.id}">
                     <input style="width: 80%" type="text" class="form-control" id="title" th:value="${post.title}" >
                     <input style="width: 20%; margin-left: 10px" type="text" class="form-control" id="author" th:value="${post.author}" readonly>
                 </div>
@@ -23,7 +23,6 @@
             <button type="button" class="btn btn-primary" id="btn-update">수정완료</button>
             <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
         </div>
-
     </div>
 </div>
 
