--- a/src/main/resources/templates/posts-read.html
+++ b/src/main/resources/templates/posts-read.html
@@ -13,7 +13,13 @@
             </div>
             <div class="form-group">
                 <label for="content">내용</label>
-                <textarea class="form-control h-75" id="content" th:text="${post.content}" readonly></textarea>
+
+
+<!--                <img th:src="'/static/files/' + ${imageUrl}"/>-->
+
+
+                <textarea class="form-control h-75" id="content" th:text="${post.content}" readonly>
+                </textarea>
             </div>
         </form>
         <div class="text-right">
