--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -3,7 +3,7 @@
 <h3 style="text-align: center">게시글 등록</h3>
 <br/>
 <div class="col-md-9 mx-auto">
-    <form>
+    <form enctype="multipart/form-data">
         <div style="display: flex;" class="form-group">
             <input style="width: 80%" type="text" class="form-control" id="title" placeholder="제목을 입력하세요" th:value="${title}">
             <input style="width: 20%; margin-left: 10px;" type="text" class="form-control" id="author" th:value="${userName}" readonly>
@@ -12,8 +12,8 @@
             <textarea class="form-control h-75" id="content" placeholder="내용을 입력하세요" th:text="${content}"></textarea>
         </div>
         <div class="form-floating mb-3">
-            <input type="file" name="files" class="form-control" id="files" multiple>
-            <label for="files">이미지 업로드</label>
+            <label>이미지 업로드</label>
+            <input type="file" name="files" accept="image/*,.txt" class="form-control" id="files" multiple>
         </div>
     </form>
     <div class="text-right">
