--- a/src/main/resources/templates/posts-read.html
+++ b/src/main/resources/templates/posts-read.html
@@ -13,13 +13,10 @@
             </div>
             <div class="form-group">
                 <label for="content">내용</label>
-
-
-<!--                <img th:src="'/static/files/' + ${imageUrl}"/>-->
-
-
-                <textarea class="form-control h-75" id="content" th:text="${post.content}" readonly>
-                </textarea>
+                <div id="content" th:text="${post.content}"></div>
+                <th:block th:each="image : ${imageUrls}">
+                    <img width="500" th:src="'/files/' + ${image}"/>
+                </th:block>
             </div>
         </form>
         <div class="text-right">
