--- a/src/main/resources/templates/posts-update.html
+++ b/src/main/resources/templates/posts-update.html
@@ -4,11 +4,11 @@
 <br/>
 <div class="col-md-9 mx-auto">
     <div class="col-md-12">
-        <form>
+        <form enctype="multipart/form-data">
             <div class="form-group">
                 <label for="content">제목</label>
                 <div style="display: flex;">
-                    <input type="hidden" th:id="'id'" th:value="${post.id}">
+                    <input type="hidden" id="id" th:value="${post.id}">
                     <input style="width: 80%" type="text" class="form-control" id="title" th:value="${post.title}" >
                     <input style="width: 20%; margin-left: 10px" type="text" class="form-control" id="author" th:value="${post.author}" readonly>
                 </div>
@@ -16,6 +16,13 @@
             <div class="form-group">
                 <label for="content">내용</label>
                 <textarea class="form-control h-75" id="content" th:text="${post.content}"></textarea>
+                <th:block th:each="image : ${imageUrls}">
+                    <img width="500" th:src="'/files/' + ${image}"/>
+                </th:block>
+            </div>
+            <div class="form-floating mb-3">
+                <label>이미지 업로드</label>
+                <input type="file" name="files" accept="image/*,.txt" class="form-control" id="files" multiple>
             </div>
         </form>
         <div class="text-right">
