--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,6 @@
     <head>
         <title>게시판</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     </head>
     <body>
@@ -21,7 +20,7 @@
                         안녕하세요! <span id="user" th:text="${user.getName()}"></span> 님
                         <a href="/logout" class="btn btn-info active" role="button">Logout</a>
                     </div>
-                    <div th:unless="${user.getName()}">
+                    <div th:unless="${user}">
                         <a href="/auth/login" class="btn btn-secondary" role="button">로그인</a>
                         <!--                    <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>-->
                         <!--                    <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>-->
