--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,14 +1,12 @@
-<th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
-
-<h1 style="text-align: center;"><a href="/">게시판</a></h1>
+<!--<th:block th:replace="~{fragments/header :: headerFragment}"></th:block>-->
 
 <body class="text-center">
     <div>
         <a href="/oauth2/authorization/google">
-            <img src="/images/google_login.png" alt="google image">
+            <img src="/img/google_login.png" alt="google image">
         </a>
         <a href="/oauth2/authorization/naver">
-            <img src="/images/naver_login.png" alt="naver image">
+            <img src="/img/naver_login.png" alt="naver image">
         </a>
     </div>
 </body>
