--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -4,10 +4,18 @@
 <br/>
 <div class="col-md-9 mx-auto">
     <form enctype="multipart/form-data">
+        <label for="postType">게시판</label>
+        <select name="postType" id="postType">
+            <option value="notice">공지사항</option>
+            <option value="free">자유게시판</option>
+            <option value="qna">Q&A</option>
+        </select>
+        <label for="content">제목</label>
         <div style="display: flex;" class="form-group">
             <input style="width: 80%" type="text" class="form-control" id="title" placeholder="제목을 입력하세요" th:value="${title}">
             <input style="width: 20%; margin-left: 10px;" type="text" class="form-control" id="author" th:value="${user.getName()}" readonly>
         </div>
+        <label for="content">내용</label>
         <div class="form-group">
             <textarea class="form-control h-75" id="content" placeholder="내용을 입력하세요" th:text="${content}"></textarea>
         </div>
