20240306 게시판 카테고리

--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -7,7 +7,7 @@
         <label for="postType">게시판</label>
         <div>
             <select name="postType" id="postType">
-                <option value="ALL">전체게시판</option>
+                <option value="">게시판 선택</option>
                 <option value="NOTICE">공지사항</option>
                 <option value="FREE">자유게시판</option>
             </select>
