--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,16 +7,11 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <th:block th:each="postType : ${postTypes}">
-<!--                    <li class="nav-item active">-->
-                    <li class="nav-item">
-                        <a class="nav-link" id="filterPost" th:text="${postType.title}" th:href="@{/(postType.title)}"><span class="sr-only">(current)</span></a>
+                <th:block th:each="postType : ${postTypes}"> <!--미완성-->
+                    <li class="nav-item" th:classappend="${postType.key == value} ? 'active' : ''">
+                        <a class="nav-link" id="filterPost" th:text="${postType.title}" th:value="${postType.key}" th:href="@{'?postType=' + ${postType.key}}"></a>
                     </li>
                 </th:block>
-
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">공지사항</a>-->
-<!--                </li>-->
             </ul>
             <!--검색 영역-->
             <form class="form-inline my-2 my-lg-0" action="/" method="GET" role="search">
