--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,16 +7,27 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <th:block th:each="postType : ${postTypes}"> <!--미완성-->
-                    <li class="nav-item" th:classappend="${postType.key == value} ? 'active' : ''">
-                        <a class="nav-link" id="filterPost" th:text="${postType.title}" th:value="${postType.key}" th:href="@{'?postType=' + ${postType.key}}"></a>
+                <th:block th:each="postType : ${postTypes}" th:with="postTypeString=${#strings.toString(param.postType)}">
+                    <li class="nav-item">
+                        <a class="nav-link" id="filterPost"
+                           th:classappend="${postType.key == postTypeString} ? 'active' : ''"
+                           th:text="${postType.title}"
+                           th:value="${postType.key}"
+                           th:href="@{'?postType=' + ${postType.key}}"></a>
                     </li>
                 </th:block>
             </ul>
             <!--검색 영역-->
             <form class="form-inline my-2 my-lg-0" action="/" method="GET" role="search">
+                <select class="form-control mr-sm-2">
+                    <option value="">제목</option>
+                    <option value="">내용</option>
+                    <option value="">제목 + 내용</option>
+                    <option value="">작성자</option>
+                </select>
                 <input class="form-control mr-sm-2" type="text" name="searchKeyword" id="search" placeholder="검색어를 입력하세요."
-                       th:value="${param.searchKeyword}">
+                       th:value="${param.searchKeyword}"/>
+                <input type="hidden" name="postType" th:value="${param.postType}" />
                 <button class="btn btn-light">검색</button>
             </form>
         </div>
@@ -27,8 +38,8 @@
         <thead class="thead-strong">
             <tr>
                 <th style="width: 10%; text-align: center">번호</th>
-                <th style="width: 10%; text-align: center">탭</th>
-                <th style="width: 40%; text-align: center">제목</th>
+                <th style="width: 15%; text-align: center">탭</th>
+                <th style="width: 35%; text-align: center">제목</th>
                 <th style="width: 10%; text-align: center">작성자</th>
                 <th style="width: 20%; text-align: center">최종수정일</th>
                 <th style="width: 10%; text-align: center">조회수</th>
@@ -64,7 +75,9 @@
             <th:block th:each="page: ${#numbers.sequence(startPage, endPage)}">
                 <a class="page-link"
                    th:if="${page != nowPage}"
-                   th:href="@{/(page = ${page - 1}, searchKeyword = ${param.searchKeyword})}"
+                   th:href="@{/(page = ${page - 1}
+                   , searchKeyword = ${param.searchKeyword}
+                   , postType = ${param.postType})}"
                    th:text="${page}">
                 </a>
                 <strong class="page-link" th:if="${page == nowPage}" th:text="${page}"></strong>
