20240317 복합키로 이루어진 테이블을 이용한 추천 기능 구현

--- a/src/main/resources/templates/posts-read.html
+++ b/src/main/resources/templates/posts-read.html
@@ -22,7 +22,11 @@
                 <label for="content" th:text="'조회수 : ' + ${post.view}"></label>
             </div>
             <div class="text-center">
-                <button id="recommend" type="button">추천</button>
+                <button id="recommend" type="button">
+                    <span th:text="추천">
+
+                    </span>
+                </button>
                 <span id="recommendCount" th:text="${post.recommend}"></span>
             </div>
         </form>
