--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,16 +1,103 @@
-<!--<th:block th:replace="~{fragments/header :: headerFragment}"></th:block>-->
+<!DOCTYPE HTML>
+<html lagn="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<body class="text-center">
-    <div>
-        <a href="/oauth2/authorization/google">
-            <img src="/img/google_login.png" alt="google image">
-        </a>
-        <a href="/oauth2/authorization/naver">
-            <img src="/img/naver_login.png" alt="naver image">
-        </a>
+    <title>로그인</title>
+
+    <!-- Custom fonts for this template-->
+    <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="/css/sb-admin-2.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
+</head>
+
+<body class="bg-gradient-primary">
+
+<div class="container">
+
+    <!-- Outer Row -->
+    <div class="row justify-content-center">
+
+        <div class="col-xl-10 col-lg-12 col-md-9">
+
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                        <div class="col-lg-6">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">로그인</h1>
+                                </div>
+                                <form class="user" action="/loginProc" method="post">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control form-control-user"
+                                               id="email" aria-describedby="emailHelp"
+                                               name="email"
+                                               placeholder="이메일을 입력하세요">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control form-control-user"
+                                               id="password" name="password" placeholder="비밀번호를 입력하세요">
+                                    </div>
+<!--                                    <div class="form-group">-->
+<!--                                        <div class="custom-control custom-checkbox small">-->
+<!--                                            <input type="checkbox" class="custom-control-input" id="customCheck">-->
+<!--                                            <label class="custom-control-label" for="customCheck">아이디 저장</label>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+                                    <button type="submit" class="btn btn-primary btn-user btn-block">
+                                        로그인
+                                    </button>
+                                    <hr>
+                                    <a href="/oauth2/authorization/google" class="btn btn-outline-secondary btn-user btn-block">
+                                        <img id="googleImg" src="/img/google.svg" style="width: 30px; height: auto;"/> 구글 계정 으로 로그인
+                                    </a>
+                                    <a href="/oauth2/authorization/naver" class="btn btn-outline-secondary btn-user btn-block">
+                                        <img id="naverImg" src="/img/naver.svg" style="width: 30px; height: auto;"/> 네이버 계정으로 로그인
+                                    </a>
+                                </form>
+                                <hr>
+                                <div class="text-center">
+                                    <a href="#" class="small" >비밀번호 찾기</a>
+                                </div>
+                                <div class="text-center">
+                                    <a href="/auth/join" class="small">회원가입</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
+
+</div>
+
+<!-- Bootstrap core JavaScript-->
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Core plugin JavaScript-->
+<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="/js/sb-admin-2.min.js"></script>
+
 </body>
 
-    <br>
-
-<th:block th:replace="~{fragments/footer :: footerFragment}"></th:block>
+</html>
