--- a/src/main/resources/templates/login2.html
+++ b/src/main/resources/templates/login2.html
@@ -73,7 +73,7 @@
 <!--                                        <a class="small" href="forgot-password.html">Forgot Password?</a>-->
 <!--                                    </div>-->
 <!--                                    <div class="text-center">-->
-<!--                                        <a class="small" href="register.html">Create an Account!</a>-->
+<!--                                        <a class="small" href="join.html">Create an Account!</a>-->
 <!--                                    </div>-->
                                 </div>
                             </div>
