20240318 일반 로그인 안되던 것 해결

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,15 +5,15 @@
 
             <script src="/js/app/index.js"></script>
 
-<!--            &lt;!&ndash; Bootstrap core JavaScript&ndash;&gt;-->
-<!--            <script src="/vendor/jquery/jquery.min.js"></script>-->
-<!--            <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
+            <!-- Bootstrap core JavaScript-->
+            <script src="/vendor/jquery/jquery.min.js"></script>
+            <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<!--            &lt;!&ndash; Core plugin JavaScript&ndash;&gt;-->
-<!--            <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>-->
+            <!-- Core plugin JavaScript-->
+            <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-<!--            &lt;!&ndash; Custom scripts for all pages&ndash;&gt;-->
-<!--            <script src="/js/sb-admin-2.min.js"></script>-->
+            <!-- Custom scripts for all pages-->
+            <script src="/js/sb-admin-2.min.js"></script>
         </body>
     </html>
     <br/>
